--- a/content/resources/css/preferences_dev.css
+++ b/content/resources/css/preferences_dev.css
@@ -2,18 +2,22 @@ body
 {
 	max-height: 540px; 
 	font-size: 15px;
-	background-color: #eef;
+	margin: 0px;
+	padding: 8px;
 }
 
 ul
 {
 	list-style-type: none;
 	margin: 2px;
+	margin-top: 0;
 	padding: 2px;
 }
 
 ul.nav {
 	border: 1px solid black;
+	border-radius: 0 0 5px 5px;
+	border-top: none;
 }
 
 ul li ul
@@ -222,10 +226,11 @@ ul.nav li.hide
 
 ul.nav li.active
 {
-	background-color: #a7d3ed;
-	/*background-color: white;*/
-	/*border: 2px solid #a8a8a8;
-	border-bottom: none;*/
+	background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
+	background: linear-gradient(to bottom, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
 }
 
 ul.nav li a
@@ -237,7 +242,11 @@ ul.nav li a
 
 ul.nav li:hover
 {
-	background-color: #a7d3ed;
+	background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
+	background: linear-gradient(to bottom, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
 }
 
 ul.nav li a:hover
@@ -279,7 +288,6 @@ div#main
 	-moz-box-orient: vertical;
 	box-orient: vertical;
 
-	border-left: 1px solid black;
 	padding-left: 5px;
 }
 
@@ -421,6 +429,12 @@ html[dir="rtl"] #search {
 	border-top-left-radius: 5px;
 	border: 1px solid black;
 	border-bottom: none;
+
+	background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
+	background: linear-gradient(to bottom, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
 }
 
 .module-content {
@@ -430,4 +444,52 @@ html[dir="rtl"] #search {
 	border-right: 1px solid black;
 	padding: 5px;
 	background-color: #fff;
+}
+
+span.nav{
+	border: 1px solid black;
+	border-radius: 5px 5px 0 0;
+	margin: 2px;
+	margin-bottom: 0;
+	padding: 2px;
+
+	display:block;
+	background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
+	background: linear-gradient(to bottom, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
+}
+
+#breadcrumbs {
+	border: 1px solid black;
+	border-radius: 5px 5px 5px 5px;
+	margin: 2px;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 4px;
+
+	display:block;
+	background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
+	background: linear-gradient(to bottom, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
+}
+
+#breadcrumbs a {
+	
+	margin: 1px;
+	margin-bottom: 0;
+	padding: 1px;
+	text-decoration: none;
+	color: #000;
+}
+
+#breadcrumbs a:hover {
+	text-decoration: underline;
+}
+
+#breadcrumbs span {
+	color: #fff;
 }
