ff restart less. need to test with ff android. ff mobile is discontinued anyways i think
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10195 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/overlay.css
+++ b/content/resources/css/overlay.css
@@ -11,3 +11,7 @@
 toolbar[iconsize="small"] #foxtrick-toolbar-button {
 	list-style-image: url("chrome://foxtrick/skin/icon-16.png");
 }
+
+#foxtrick-popup-copy {
+	list-style-image: url("chrome://foxtrick/skin/icon-16.png");
+}
