--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -1,6 +1,6 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws), domain(hat-trick.net), domain(hattrick.name) {
 
-#ft_swap_positions, #ft_fill_penalty_takers {
+#ft_swap_positions, #ft_fill_penalty_takers, #ft_clear_penalty_takers {
 	background-color: #3f7137; 
 	cursor: pointer; 
 	padding: 6px; 
@@ -14,14 +14,14 @@
 	position: relative;
 	top: 255px;
 }
-#ft_fill_penalty_takers {
+#ft_clear_penalty_takers {
 	clear: both;
 }
-html[dir="ltr"] #ft_fill_penalty_takers {
+html[dir="ltr"] #ft_fill_penalty_takers, html[dir="ltr"] #ft_clear_penalty_takers {
 	float: right;
 	margin-right: 20px;
 }
-html[dir="rtl"] #ft_fill_penalty_takers {
+html[dir="rtl"] #ft_fill_penalty_takers, html[dir="rtl"] #ft_clear_penalty_takers {
 	float: left;
 	margin-left: 20px;
 }
